--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
     "name": "inflection",
-    "version": "0.0.1"
+    "version": "0.0.1",
     "main": "lib/inflection",
     "description": "A port the Rails/ActiveSupport inflector to JavaScript",
     "keywords": ["utility", "inflection"],
     "maintainers": [
         {
-            "name": "George Moschovitis",
-            "email": "george.moschovitis@gmail.com",
-            "web": "http://www.gmosx.com"
+            "name": "Jeff Barczewski",
+            "email": "jeff.barczewski@gmail.com",
+            "web": "http://inspiredhorizons.com"
         }
     ],
     "contributors": [
+        {
+            "name": "Jeff Barczewski",
+            "email": "jeff.barczewski@gmail.com",
+            "web": "http://inspiredhorizons.com"
+        },
         {
             "name": "George Moschovitis",
             "email": "george.moschovitis@gmail.com",
